sdk/c/webos.h

/* Generated by scripts/generate_abi.py; do not edit. */
#ifndef WEBOS_ABI_V1_H
#define WEBOS_ABI_V1_H
#ifdef __cplusplus
extern "C" {
#endif
#define WEBOS_ABI_MAJOR 1u
#define WEBOS_ABI_MINOR 0u
#define WEBOS_ABI_VERSION ((WEBOS_ABI_MAJOR << 16) | WEBOS_ABI_MINOR)
#define WEBOS_ABI_MAX_IO_BYTES 65536u
#define WEBOS_ABI_MAX_PATH_BYTES 255u
enum webos_error {
  WEBOS_OK = 0,
  WEBOS_INVALID = -1,
  WEBOS_DENIED = -2,
  WEBOS_NOT_FOUND = -3,
  WEBOS_IO = -4,
  WEBOS_TOO_LARGE = -5,
  WEBOS_BUSY = -6,
  WEBOS_UNSUPPORTED = -7,
};
enum webos_log_level {
  WEBOS_LOG_ERROR = 1,
  WEBOS_LOG_WARN = 2,
  WEBOS_LOG_INFO = 3,
  WEBOS_LOG_DEBUG = 4,
};
void webos_log(unsigned int level, const void* data, unsigned int length);
void webos_sleep_ms(unsigned int milliseconds);
int webos_read(const char* path, void* data, unsigned int capacity);
int webos_write(const char* path, const void* data, unsigned int length);
void webos_ready(void);
void webos_heartbeat(void);
#define WEBOS_LOG_TEXT(text) webos_log(WEBOS_LOG_INFO, (text), (unsigned int)(sizeof(text) - 1u))
/* Optional webos.http/1 extension; the host returns WEB_HTTP_ERR_DENIED without a grant. */
enum web_http_method { WEB_HTTP_GET, WEB_HTTP_POST, WEB_HTTP_PUT, WEB_HTTP_DELETE, WEB_HTTP_PATCH, WEB_HTTP_HEAD };
enum web_http_error {
  WEB_HTTP_OK = 0,
  WEB_HTTP_ERR_INVALID = -1,
  WEB_HTTP_ERR_NO_NETWORK = -2,
  WEB_HTTP_ERR_DNS = -3,
  WEB_HTTP_ERR_CONNECT = -4,
  WEB_HTTP_ERR_TLS = -5,
  WEB_HTTP_ERR_TIMEOUT = -6,
  WEB_HTTP_ERR_TOO_LARGE = -7,
  WEB_HTTP_ERR_IO = -8,
  WEB_HTTP_ERR_DENIED = -9,
  WEB_HTTP_ERR_BUSY = -10,
  WEB_HTTP_ERR_UNSUPPORTED = -11
};
enum web_http_response_flags { WEB_HTTP_RESPONSE_TRUNCATED = 1u << 0, WEB_HTTP_RESPONSE_LENGTH_UNKNOWN = 1u << 1 };
struct web_http_response {
  unsigned int struct_size, status_code, body_len, content_length, flags;
};
int web_http_request(unsigned int method, const char* url, unsigned int url_len, const void* headers,
                     unsigned int headers_len, const void* request_body, unsigned int request_body_len,
                     void* response_body, unsigned int response_capacity, struct web_http_response* response,
                     unsigned int response_size, unsigned int timeout_ms);
#define WEBOS_DECLARE_ABI_VERSION() enum { webos_abi_declared_version = WEBOS_ABI_VERSION };
#ifdef __cplusplus
}
#endif
#endif